objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Activation_Datetime__c</fullName>
        <label>Activation Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alicuota__c</fullName>
        <description>Overall Tax Rate applicable to the Product</description>
        <label>Alicuota</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Brand__c</fullName>
        <label>Asset Brand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blacklist_Remove_Date__c</fullName>
        <description>Indicates when an Asset should be removed from Blacklist.</description>
        <label>Blacklist Remove Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blacklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an Asset is on blacklist.</description>
        <label>Blacklist de Suscripciones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BundleStatus__c</fullName>
        <description>Helper field to change color of bundle if a child asset is not active (managed by trigMasterAsset.trigger)</description>
        <label>Bundle Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Sistema_Origen__c</fullName>
        <description>Product Code in the External Source System</description>
        <externalId>true</externalId>
        <inlineHelpText>Product Code in the External Source Catalog System, to be used by Catalog Synchronization tools</inlineHelpText>
        <label>Codigo Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveOneTimeTotal_w_Tax__c</fullName>
        <label>Effective One Time Total w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EffectiveRecurringTotal_w_Tax__c</fullName>
        <label>Effective Recurring Total w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICCID__c</fullName>
        <label>ICCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Sistema_Origen__c</fullName>
        <description>Product ID in the External Source Catalog System</description>
        <externalId>true</externalId>
        <inlineHelpText>Product ID in the External Source Catalog System, for reference in Catalog Synchronization tools.</inlineHelpText>
        <label>ID Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Warranty__c</fullName>
        <description>Used by TechCare to flag when a device&apos;s warranty is void</description>
        <label>Garantía inválida</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Válida</fullName>
                </value>
                <value>
                    <fullName>Inválida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Linked_Product_Family__c</fullName>
        <formula>TEXT(Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Linked Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSISDN__c</fullName>
        <description>MSISDN Line number</description>
        <inlineHelpText>MSISDN Line number</inlineHelpText>
        <label>MSISDN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicador de si el asset fue migrado desde legado; cuando está valuado a TRUE indica de manera inequívoca que el contacto se migró de legado</description>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Status__c</fullName>
        <label>Network Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_Sistema_Origen__c</fullName>
        <description>Product Name in the External Source Catalog System</description>
        <inlineHelpText>Product Name in the External Source Catalog System</inlineHelpText>
        <label>Nombre Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneTimeCalculatedPrice_w_Tax__c</fullName>
        <label>One Time Calculated Price w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OneTimeCharge_w_Tax__c</fullName>
        <label>One Time Charge w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OneTimeTotal_w_Tax__c</fullName>
        <label>One Time Total w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PortOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the line is in a port out process</description>
        <label>PortOut_InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Object_Type__c</fullName>
        <formula>Product2.vlocity_cmt__ObjectTypeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringCalculatedPrice_w_Tax__c</fullName>
        <label>Recurring Calculated Price w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecurringCharge_w_Tax__c</fullName>
        <label>Recurring Charge w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecurringTotal_w_Tax__c</fullName>
        <label>Recurring Total w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Date_Time__c</fullName>
        <label>Rehab Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sistema_Origen__c</fullName>
        <description>Name of the Source Catalog System</description>
        <inlineHelpText>Name of the Source Catalog System, used for Catalog synchronization</inlineHelpText>
        <label>Sistema Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>Infotainment</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTipo_de_Producto__c</fullName>
        <formula>TEXT( Product2.vlocity_cmt__SubType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubTipo de Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>Field to descript the reason a status had been apply for an asset</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Siniestro</fullName>
                </value>
                <value>
                    <fullName>Fraude</fullName>
                </value>
                <value>
                    <fullName>Port-out</fullName>
                </value>
                <value>
                    <fullName>Mora</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por mora</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por fraude</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida voluntariamente</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por siniestro</fullName>
                </value>
                <value>
                    <fullName>Línea suspendida por Dorma</fullName>
                </value>
                <value>
                    <fullName>Suspend-Siniestro</fullName>
                </value>
                <value>
                    <fullName>Suspend-Fraude</fullName>
                </value>
                <value>
                    <fullName>Suspend-Voluntaria</fullName>
                </value>
                <value>
                    <fullName>Mora-Parcial</fullName>
                </value>
                <value>
                    <fullName>Mora-Total</fullName>
                </value>
                <value>
                    <fullName>Administrativo</fullName>
                </value>
                <value>
                    <fullName>PortOut</fullName>
                </value>
                <value>
                    <fullName>Resume-Cliente</fullName>
                </value>
                <value>
                    <fullName>Resume-Operador</fullName>
                </value>
                <value>
                    <fullName>Resume-Extravio</fullName>
                </value>
                <value>
                    <fullName>Siniestro/Extravio</fullName>
                </value>
                <value>
                    <fullName>Suspend-PortOut</fullName>
                </value>
                <value>
                    <fullName>Conciliate</fullName>
                </value>
                <value>
                    <fullName>Suspend-Robo</fullName>
                </value>
                <value>
                    <fullName>Suspend-Hurto</fullName>
                </value>
                <value>
                    <fullName>Suspend-Extravio</fullName>
                </value>
                <value>
                    <fullName>Robo</fullName>
                </value>
                <value>
                    <fullName>Hurto</fullName>
                </value>
                <value>
                    <fullName>Extravio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspend_Date_Time__c</fullName>
        <description>Date that the asset got suspended.</description>
        <label>Suspend Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tangible__c</fullName>
        <formula>Product2.Tangible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tangible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Producto__c</fullName>
        <formula>TEXT( Product2.vlocity_cmt__Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Destruction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destrucción Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assetModel__c</fullName>
        <label>Asset Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>imei__c</fullName>
        <label>Imei</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationDate__c</fullName>
        <description>The date when this asset was activated.</description>
        <inlineHelpText>Activation Date for this Asset</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationName__c</fullName>
        <description>Name of the person who activated this asset.</description>
        <label>Activation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetReferenceId__c</fullName>
        <description>Unique identifier of the asset. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle. Populate this field with some globally unique identifier if the asset is created/mastered in an external system. When created initially within Salesforce, Vlocity assigns a value based on the Salesforce ID.</description>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the asset.</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Assets</relationshipLabel>
        <relationshipName>BillingAccountAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConnectDate__c</fullName>
        <label>Connect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrencyPaymentMode__c</fullName>
        <label>Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisconnectDate__c</fullName>
        <label>Disconnect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <label>Effective One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveQuantity__c</fullName>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InCartQuantityMap__c</fullName>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemName__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing Vlocity Attribute data for the asset.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Vlocity line number copied from the order which assists in sequencing the assets and organizing them into a hierarchy.</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCalculatedPrice__c</fullName>
        <label>One Time Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCharge__c</fullName>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeDiscountPrice__c</fullName>
        <label>One Time Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyPrice__c</fullName>
        <label>One Time Loyalty Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeManualDiscount__c</fullName>
        <label>One Time Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Product from which this asset was created or most recently updated.</description>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentItemId__c</fullName>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Assets Using This Price List</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricebookEntryId__c</fullName>
        <description>PricebookEntryId</description>
        <inlineHelpText>PricebookEntryId</inlineHelpText>
        <label>PricebookEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingLogData__c</fullName>
        <description>Detailed pricing log information for this asset stored as a JSON structure.</description>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttribXN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use JSONAttribute__c.</description>
        <label>Product Attribute</label>
        <referenceTo>vlocity_cmt__ProductAttribXN__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyPath__c</fullName>
        <description>Vlocity internal field which identifies the path for this asset within the product hierarchy.</description>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>The current provisioning, or fulfillment, status of the asset with values such as New, Active, Changed or Deleted.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCalculatedPrice__c</fullName>
        <label>Recurring Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCharge__c</fullName>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringDiscountPrice__c</fullName>
        <label>Recurring Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringManualDiscount__c</fullName>
        <label>Recurring Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringUOM__c</fullName>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootItemId__c</fullName>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Assets</relationshipLabel>
        <relationshipName>ServiceAccountAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Service Point Assets</relationshipLabel>
        <relationshipName>ServicePointAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__Asset_Activation_Date_Rule</fullName>
        <active>false</active>
        <description>Validation Rule for Asset Activation Date. It should not be in the past.</description>
        <errorConditionFormula>OR (vlocity_cmt__ActivationDate__c&lt;TODAY())</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__ActivationDate__c</errorDisplayField>
        <errorMessage>Activation Date cannot be in the past.</errorMessage>
    </validationRules>
</CustomObject>